y.output
Grammar

    0 $accept: start $end

    1 start: program

    2 program: function_declaration_statement program function_definition_block
    3        | main

    4 main: statements

    5 function_declaration_statement: FUNCTION function_declaration ';'

    6 function_declaration: var_type function
    7                     | var_type function IDENTIFIER
    8                     | VOID function
    9                     | VOID function IDENTIFIER

   10 var_type: STRING
   11         | NUMBER
   12         | BOOLEAN

   13 function: function IDENTIFIER params
   14         | IDENTIFIER params

   15 params: '(' param_list ')'
   16       | '(' ')'

   17 param_list: param_list ',' var_type IDENTIFIER
   18           | var_type IDENTIFIER

   19 $@1: %empty

   20 function_definition_block: FUNCTION function_definition '{' $@1 statements '}'
   21                          | FUNCTION function_definition '{' '}'

   22 function_definition: var_type function
   23                    | var_type function IDENTIFIER
   24                    | VOID function
   25                    | VOID function IDENTIFIER

   26 statements: statements statement
   27           | statement

   28 $@2: %empty

   29 statement: '{' $@2 statements '}'
   30          | var_type IDENTIFIER ';'
   31          | var_type IDENTIFIER '[' NUMBER_LITERAL ']' ';'
   32          | WHILE '(' expression ')' while_statement
   33          | IF '(' expression ')' statement
   34          | IF '(' expression ')' statement ELSE statement
   35          | IDENTIFIER '=' expression ';'
   36          | PRINT expression ';'
   37          | SCAN IDENTIFIER ';'
   38          | IDENTIFIER INC_OP ';'
   39          | IDENTIFIER DEC_OP ';'
   40          | SUCCESSFUL EXIT ';'
   41          | FAILED EXIT ';'
   42          | function_call_statement ';'

   43 $@3: %empty

   44 while_statement: '{' $@3 while_statements '}'
   45                | var_type IDENTIFIER ';'
   46                | var_type IDENTIFIER '[' NUMBER_LITERAL ']' ';'
   47                | WHILE '(' expression ')' while_statement
   48                | IF '(' expression ')' statement
   49                | IF '(' expression ')' statement ELSE statement
   50                | IDENTIFIER '=' expression ';'
   51                | PRINT expression ';'
   52                | SCAN IDENTIFIER ';'
   53                | IDENTIFIER INC_OP ';'
   54                | IDENTIFIER DEC_OP ';'
   55                | BREAK ';'
   56                | CONTINUE ';'
   57                | SUCCESSFUL EXIT ';'
   58                | FAILED EXIT ';'
   59                | function_call_statement ';'

   60 while_statements: while_statements while_statement
   61                 | while_statement

   62 expression: expression '+' expression
   63           | expression '-' expression
   64           | expression '*' expression
   65           | expression '/' expression
   66           | expression '%' expression
   67           | IDENTIFIER INC_OP
   68           | IDENTIFIER DEC_OP
   69           | expression '>' expression
   70           | expression '<' expression
   71           | expression '&' expression
   72           | expression '|' expression
   73           | expression EQ_OP expression
   74           | expression GE_OP expression
   75           | expression LE_OP expression
   76           | expression NE_OP expression
   77           | '-' expression
   78           | IDENTIFIER '[' expression ']'
   79           | IDENTIFIER
   80           | NUMBER_LITERAL
   81           | STRING_LITERAL
   82           | TRUE_LITERAL
   83           | FALSE_LITERAL
   84           | function_call_statement

   85 function_call_statement: function_call
   86                        | function_call IDENTIFIER

   87 function_call: function_call IDENTIFIER args
   88              | IDENTIFIER args

   89 args: '(' arg_list ')'
   90     | '(' ')'

   91 arg_list: arg_list ',' expression
   92         | expression


Terminals, with rules where they appear

$end (0) 0
'%' (37) 66
'&' (38) 71
'(' (40) 15 16 32 33 34 47 48 49 89 90
')' (41) 15 16 32 33 34 47 48 49 89 90
'*' (42) 64
'+' (43) 62
',' (44) 17 91
'-' (45) 63 77
'/' (47) 65
';' (59) 5 30 31 35 36 37 38 39 40 41 42 45 46 50 51 52 53 54 55 56
    57 58 59
'<' (60) 70
'=' (61) 35 50
'>' (62) 69
'[' (91) 31 46 78
']' (93) 31 46 78
'{' (123) 20 21 29 44
'|' (124) 72
'}' (125) 20 21 29 44
error (256)
IDENTIFIER (258) 7 9 13 14 17 18 23 25 30 31 35 37 38 39 45 46 50 52
    53 54 67 68 78 79 86 87 88
STRING_LITERAL (259) 81
NUMBER_LITERAL (260) 31 46 80
TRUE_LITERAL (261) 82
FALSE_LITERAL (262) 83
EXIT (263) 40 41 57 58
NUMBER (264) 11
STRING (265) 10
BOOLEAN (266) 12
VOID (267) 8 9 24 25
FUNCTION (268) 5 20 21
IF (269) 33 34 48 49
ELSE (270) 34 49
WHILE (271) 32 47
BREAK (272) 55
CONTINUE (273) 56
PRINT (274) 36 51
SCAN (275) 37 52
EQ_OP (276) 73
GE_OP (277) 74
LE_OP (278) 75
NE_OP (279) 76
INC_OP (280) 38 53 67
DEC_OP (281) 39 54 68
SUCCESSFUL (282) 40 57
FAILED (283) 41 58
IFX (284)
UNARY_MINUS (285)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
start (50)
    on left: 1, on right: 0
program (51)
    on left: 2 3, on right: 1 2
main (52)
    on left: 4, on right: 3
function_declaration_statement (53)
    on left: 5, on right: 2
function_declaration (54)
    on left: 6 7 8 9, on right: 5
var_type (55)
    on left: 10 11 12, on right: 6 7 17 18 22 23 30 31 45 46
function (56)
    on left: 13 14, on right: 6 7 8 9 13 22 23 24 25
params (57)
    on left: 15 16, on right: 13 14
param_list (58)
    on left: 17 18, on right: 15 17
function_definition_block (59)
    on left: 20 21, on right: 2
$@1 (60)
    on left: 19, on right: 20
function_definition (61)
    on left: 22 23 24 25, on right: 20 21
statements (62)
    on left: 26 27, on right: 4 20 26 29
statement (63)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42, on right: 26
    27 33 34 48 49
$@2 (64)
    on left: 28, on right: 29
while_statement (65)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59, on right:
    32 47 60 61
$@3 (66)
    on left: 43, on right: 44
while_statements (67)
    on left: 60 61, on right: 44 60
expression (68)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
    80 81 82 83 84, on right: 32 33 34 35 36 47 48 49 50 51 62 63 64
    65 66 69 70 71 72 73 74 75 76 77 78 91 92
function_call_statement (69)
    on left: 85 86, on right: 42 59 84
function_call (70)
    on left: 87 88, on right: 85 86 87
args (71)
    on left: 89 90, on right: 87 88
arg_list (72)
    on left: 91 92, on right: 89 91


State 0

    0 $accept: . start $end
    1 start: . program
    2 program: . function_declaration_statement program function_definition_block
    3        | . main
    4 main: . statements
    5 function_declaration_statement: . FUNCTION function_declaration ';'
   10 var_type: . STRING
   11         | . NUMBER
   12         | . BOOLEAN
   26 statements: . statements statement
   27           | . statement
   29 statement: . '{' $@2 statements '}'
   30          | . var_type IDENTIFIER ';'
   31          | . var_type IDENTIFIER '[' NUMBER_LITERAL ']' ';'
   32          | . WHILE '(' expression ')' while_statement
   33          | . IF '(' expression ')' statement
   34          | . IF '(' expression ')' statement ELSE statement
   35          | . IDENTIFIER '=' expression ';'
   36          | . PRINT expression ';'
   37          | . SCAN IDENTIFIER ';'
   38          | . IDENTIFIER INC_OP ';'
   39          | . IDENTIFIER DEC_OP ';'
   40          | . SUCCESSFUL EXIT ';'
   41          | . FAILED EXIT ';'
   42          | . function_call_statement ';'
   85 function_call_statement: . function_call
   86                        | . function_call IDENTIFIER
   87 function_call: . function_call IDENTIFIER args
   88              | . IDENTIFIER args

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    STRING      shift, and go to state 3
    BOOLEAN     shift, and go to state 4
    FUNCTION    shift, and go to state 5
    IF          shift, and go to state 6
    WHILE       shift, and go to state 7
    PRINT       shift, and go to state 8
    SCAN        shift, and go to state 9
    SUCCESSFUL  shift, and go to state 10
    FAILED      shift, and go to state 11
    '{'         shift, and go to state 12

    start                           go to state 13
    program                         go to state 14
    main                            go to state 15
    function_declaration_statement  go to state 16
    var_type                        go to state 17
    statements                      go to state 18
    statement                       go to state 19
    function_call_statement         go to state 20
    function_call                   go to state 21


State 1

   35 statement: IDENTIFIER . '=' expression ';'
   38          | IDENTIFIER . INC_OP ';'
   39          | IDENTIFIER . DEC_OP ';'
   88 function_call: IDENTIFIER . args
   89 args: . '(' arg_list ')'
   90     | . '(' ')'

    INC_OP  shift, and go to state 22
    DEC_OP  shift, and go to state 23
    '('     shift, and go to state 24
    '='     shift, and go to state 25

    args  go to state 26


State 2

   11 var_type: NUMBER .

    $default  reduce using rule 11 (var_type)


State 3

   10 var_type: STRING .

    $default  reduce using rule 10 (var_type)


State 4

   12 var_type: BOOLEAN .

    $default  reduce using rule 12 (var_type)


State 5

    5 function_declaration_statement: FUNCTION . function_declaration ';'
    6 function_declaration: . var_type function
    7                     | . var_type function IDENTIFIER
    8                     | . VOID function
    9                     | . VOID function IDENTIFIER
   10 var_type: . STRING
   11         | . NUMBER
   12         | . BOOLEAN

    NUMBER   shift, and go to state 2
    STRING   shift, and go to state 3
    BOOLEAN  shift, and go to state 4
    VOID     shift, and go to state 27

    function_declaration  go to state 28
    var_type              go to state 29


State 6

   33 statement: IF . '(' expression ')' statement
   34          | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 30


State 7

   32 statement: WHILE . '(' expression ')' while_statement

    '('  shift, and go to state 31


State 8

   36 statement: PRINT . expression ';'
   62 expression: . expression '+' expression
   63           | . expression '-' expression
   64           | . expression '*' expression
   65           | . expression '/' expression
   66           | . expression '%' expression
   67           | . IDENTIFIER INC_OP
   68           | . IDENTIFIER DEC_OP
   69           | . expression '>' expression
   70           | . expression '<' expression
   71           | . expression '&' expression
   72           | . expression '|' expression
   73           | . expression EQ_OP expression
   74           | . expression GE_OP expression
   75           | . expression LE_OP expression
   76           | . expression NE_OP expression
   77           | . '-' expression
   78           | . IDENTIFIER '[' expression ']'
   79           | . IDENTIFIER
   80           | . NUMBER_LITERAL
   81           | . STRING_LITERAL
   82           | . TRUE_LITERAL
   83           | . FALSE_LITERAL
   84           | . function_call_statement
   85 function_call_statement: . function_call
   86                        | . function_call IDENTIFIER
   87 function_call: . function_call IDENTIFIER args
   88              | . IDENTIFIER args

    IDENTIFIER      shift, and go to state 32
    STRING_LITERAL  shift, and go to state 33
    NUMBER_LITERAL  shift, and go to state 34
    TRUE_LITERAL    shift, and go to state 35
    FALSE_LITERAL   shift, and go to state 36
    '-'             shift, and go to state 37

    expression               go to state 38
    function_call_statement  go to state 39
    function_call            go to state 21


State 9

   37 statement: SCAN . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 40


State 10

   40 statement: SUCCESSFUL . EXIT ';'

    EXIT  shift, and go to state 41


State 11

   41 statement: FAILED . EXIT ';'

    EXIT  shift, and go to state 42


State 12

   28 $@2: . %empty
   29 statement: '{' . $@2 statements '}'

    $default  reduce using rule 28 ($@2)

    $@2  go to state 43


State 13

    0 $accept: start . $end

    $end  shift, and go to state 44


State 14

    1 start: program .

    $default  reduce using rule 1 (start)


State 15

    3 program: main .

    $default  reduce using rule 3 (program)


State 16

    2 program: . function_declaration_statement program function_definition_block
    2        | function_declaration_statement . program function_definition_block
    3        | . main
    4 main: . statements
    5 function_declaration_statement: . FUNCTION function_declaration ';'
   10 var_type: . STRING
   11         | . NUMBER
   12         | . BOOLEAN
   26 statements: . statements statement
   27           | . statement
   29 statement: . '{' $@2 statements '}'
   30          | . var_type IDENTIFIER ';'
   31          | . var_type IDENTIFIER '[' NUMBER_LITERAL ']' ';'
   32          | . WHILE '(' expression ')' while_statement
   33          | . IF '(' expression ')' statement
   34          | . IF '(' expression ')' statement ELSE statement
   35          | . IDENTIFIER '=' expression ';'
   36          | . PRINT expression ';'
   37          | . SCAN IDENTIFIER ';'
   38          | . IDENTIFIER INC_OP ';'
   39          | . IDENTIFIER DEC_OP ';'
   40          | . SUCCESSFUL EXIT ';'
   41          | . FAILED EXIT ';'
   42          | . function_call_statement ';'
   85 function_call_statement: . function_call
   86                        | . function_call IDENTIFIER
   87 function_call: . function_call IDENTIFIER args
   88              | . IDENTIFIER args

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    STRING      shift, and go to state 3
    BOOLEAN     shift, and go to state 4
    FUNCTION    shift, and go to state 5
    IF          shift, and go to state 6
    WHILE       shift, and go to state 7
    PRINT       shift, and go to state 8
    SCAN        shift, and go to state 9
    SUCCESSFUL  shift, and go to state 10
    FAILED      shift, and go to state 11
    '{'         shift, and go to state 12

    program                         go to state 45
    main                            go to state 15
    function_declaration_statement  go to state 16
    var_type                        go to state 17
    statements                      go to state 18
    statement                       go to state 19
    function_call_statement         go to state 20
    function_call                   go to state 21


State 17

   30 statement: var_type . IDENTIFIER ';'
   31          | var_type . IDENTIFIER '[' NUMBER_LITERAL ']' ';'

    IDENTIFIER  shift, and go to state 46


State 18

    4 main: statements .  [$end, FUNCTION]
   10 var_type: . STRING
   11         | . NUMBER
   12         | . BOOLEAN
   26 statements: statements . statement
   29 statement: . '{' $@2 statements '}'
   30          | . var_type IDENTIFIER ';'
   31          | . var_type IDENTIFIER '[' NUMBER_LITERAL ']' ';'
   32          | . WHILE '(' expression ')' while_statement
   33          | . IF '(' expression ')' statement
   34          | . IF '(' expression ')' statement ELSE statement
   35          | . IDENTIFIER '=' expression ';'
   36          | . PRINT expression ';'
   37          | . SCAN IDENTIFIER ';'
   38          | . IDENTIFIER INC_OP ';'
   39          | . IDENTIFIER DEC_OP ';'
   40          | . SUCCESSFUL EXIT ';'
   41          | . FAILED EXIT ';'
   42          | . function_call_statement ';'
   85 function_call_statement: . function_call
   86                        | . function_call IDENTIFIER
   87 function_call: . function_call IDENTIFIER args
   88              | . IDENTIFIER args

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    STRING      shift, and go to state 3
    BOOLEAN     shift, and go to state 4
    IF          shift, and go to state 6
    WHILE       shift, and go to state 7
    PRINT       shift, and go to state 8
    SCAN        shift, and go to state 9
    SUCCESSFUL  shift, and go to state 10
    FAILED      shift, and go to state 11
    '{'         shift, and go to state 12

    $default  reduce using rule 4 (main)

    var_type                 go to state 17
    statement                go to state 47
    function_call_statement  go to state 20
    function_call            go to state 21


State 19

   27 statements: statement .

    $default  reduce using rule 27 (statements)


State 20

   42 statement: function_call_statement . ';'

    ';'  shift, and go to state 48


State 21

   85 function_call_statement: function_call .  [EQ_OP, GE_OP, LE_OP, NE_OP, '|', '&', '>', '<', '+', '-', '*', '/', '%', ';', ')', ',', ']']
   86                        | function_call . IDENTIFIER
   87 function_call: function_call . IDENTIFIER args

    IDENTIFIER  shift, and go to state 49

    $default  reduce using rule 85 (function_call_statement)


State 22

   38 statement: IDENTIFIER INC_OP . ';'

    ';'  shift, and go to state 50


State 23

   39 statement: IDENTIFIER DEC_OP . ';'

    ';'  shift, and go to state 51


State 24

   62 expression: . expression '+' expression
   63           | . expression '-' expression
   64           | . expression '*' expression
   65           | . expression '/' expression
   66           | . expression '%' expression
   67           | . IDENTIFIER INC_OP
   68           | . IDENTIFIER DEC_OP
   69           | . expression '>' expression
   70           | . expression '<' expression
   71           | . expression '&' expression
   72           | . expression '|' expression
   73           | . expression EQ_OP expression
   74           | . expression GE_OP expression
   75           | . expression LE_OP expression
   76           | . expression NE_OP expression
   77           | . '-' expression
   78           | . IDENTIFIER '[' expression ']'
   79           | . IDENTIFIER
   80           | . NUMBER_LITERAL
   81           | . STRING_LITERAL
   82           | . TRUE_LITERAL
   83           | . FALSE_LITERAL
   84           | . function_call_statement
   85 function_call_statement: . function_call
   86                        | . function_call IDENTIFIER
   87 function_call: . function_call IDENTIFIER args
   88              | . IDENTIFIER args
   89 args: '(' . arg_list ')'
   90     | '(' . ')'
   91 arg_list: . arg_list ',' expression
   92         | . expression

    IDENTIFIER      shift, and go to state 32
    STRING_LITERAL  shift, and go to state 33
    NUMBER_LITERAL  shift, and go to state 34
    TRUE_LITERAL    shift, and go to state 35
    FALSE_LITERAL   shift, and go to state 36
    '-'             shift, and go to state 37
    ')'             shift, and go to state 52

    expression               go to state 53
    function_call_statement  go to state 39
    function_call            go to state 21
    arg_list                 go to state 54


State 25

   35 statement: IDENTIFIER '=' . expression ';'
   62 expression: . expression '+' expression
   63           | . expression '-' expression
   64           | . expression '*' expression
   65           | . expression '/' expression
   66           | . expression '%' expression
   67           | . IDENTIFIER INC_OP
   68           | . IDENTIFIER DEC_OP
   69           | . expression '>' expression
   70           | . expression '<' expression
   71           | . expression '&' expression
   72           | . expression '|' expression
   73           | . expression EQ_OP expression
   74           | . expression GE_OP expression
   75           | . expression LE_OP expression
   76           | . expression NE_OP expression
   77           | . '-' expression
   78           | . IDENTIFIER '[' expression ']'
   79           | . IDENTIFIER
   80           | . NUMBER_LITERAL
   81           | . STRING_LITERAL
   82           | . TRUE_LITERAL
   83           | . FALSE_LITERAL
   84           | . function_call_statement
   85 function_call_statement: . function_call
   86                        | . function_call IDENTIFIER
   87 function_call: . function_call IDENTIFIER args
   88              | . IDENTIFIER args

    IDENTIFIER      shift, and go to state 32
    STRING_LITERAL  shift, and go to state 33
    NUMBER_LITERAL  shift, and go to state 34
    TRUE_LITERAL    shift, and go to state 35
    FALSE_LITERAL   shift, and go to state 36
    '-'             shift, and go to state 37

    expression               go to state 55
    function_call_statement  go to state 39
    function_call            go to state 21


State 26

   88 function_call: IDENTIFIER args .

    $default  reduce using rule 88 (function_call)


State 27

    8 function_declaration: VOID . function
    9                     | VOID . function IDENTIFIER
   13 function: . function IDENTIFIER params
   14         | . IDENTIFIER params

    IDENTIFIER  shift, and go to state 56

    function  go to state 57


State 28

    5 function_declaration_statement: FUNCTION function_declaration . ';'

    ';'  shift, and go to state 58


State 29

    6 function_declaration: var_type . function
    7                     | var_type . function IDENTIFIER
   13 function: . function IDENTIFIER params
   14         | . IDENTIFIER params

    IDENTIFIER  shift, and go to state 56

    function  go to state 59


State 30

   33 statement: IF '(' . expression ')' statement
   34          | IF '(' . expression ')' statement ELSE statement
   62 expression: . expression '+' expression
   63           | . expression '-' expression
   64           | . expression '*' expression
   65           | . expression '/' expression
   66           | . expression '%' expression
   67           | . IDENTIFIER INC_OP
   68           | . IDENTIFIER DEC_OP
   69           | . expression '>' expression
   70           | . expression '<' expression
   71           | . expression '&' expression
   72           | . expression '|' expression
   73           | . expression EQ_OP expression
   74           | . expression GE_OP expression
   75           | . expression LE_OP expression
   76           | . expression NE_OP expression
   77           | . '-' expression
   78           | . IDENTIFIER '[' expression ']'
   79           | . IDENTIFIER
   80           | . NUMBER_LITERAL
   81           | . STRING_LITERAL
   82           | . TRUE_LITERAL
   83           | . FALSE_LITERAL
   84           | . function_call_statement
   85 function_call_statement: . function_call
   86                        | . function_call IDENTIFIER
   87 function_call: . function_call IDENTIFIER args
   88              | . IDENTIFIER args

    IDENTIFIER      shift, and go to state 32
    STRING_LITERAL  shift, and go to state 33
    NUMBER_LITERAL  shift, and go to state 34
    TRUE_LITERAL    shift, and go to state 35
    FALSE_LITERAL   shift, and go to state 36
    '-'             shift, and go to state 37

    expression               go to state 60
    function_call_statement  go to state 39
    function_call            go to state 21


State 31

   32 statement: WHILE '(' . expression ')' while_statement
   62 expression: . expression '+' expression
   63           | . expression '-' expression
   64           | . expression '*' expression
   65           | . expression '/' expression
   66           | . expression '%' expression
   67           | . IDENTIFIER INC_OP
   68           | . IDENTIFIER DEC_OP
   69           | . expression '>' expression
   70           | . expression '<' expression
   71           | . expression '&' expression
   72           | . expression '|' expression
   73           | . expression EQ_OP expression
   74           | . expression GE_OP expression
   75           | . expression LE_OP expression
   76           | . expression NE_OP expression
   77           | . '-' expression
   78           | . IDENTIFIER '[' expression ']'
   79           | . IDENTIFIER
   80           | . NUMBER_LITERAL
   81           | . STRING_LITERAL
   82           | . TRUE_LITERAL
   83           | . FALSE_LITERAL
   84           | . function_call_statement
   85 function_call_statement: . function_call
   86                        | . function_call IDENTIFIER
   87 function_call: . function_call IDENTIFIER args
   88              | . IDENTIFIER args

    IDENTIFIER      shift, and go to state 32
    STRING_LITERAL  shift, and go to state 33
    NUMBER_LITERAL  shift, and go to state 34
    TRUE_LITERAL    shift, and go to state 35
    FALSE_LITERAL   shift, and go to state 36
    '-'             shift, and go to state 37

    expression               go to state 61
    function_call_statement  go to state 39
    function_call            go to state 21


State 32

   67 expression: IDENTIFIER . INC_OP
   68           | IDENTIFIER . DEC_OP
   78           | IDENTIFIER . '[' expression ']'
   79           | IDENTIFIER .  [EQ_OP, GE_OP, LE_OP, NE_OP, '|', '&', '>', '<', '+', '-', '*', '/', '%', ';', ')', ',', ']']
   88 function_call: IDENTIFIER . args
   89 args: . '(' arg_list ')'
   90     | . '(' ')'

    INC_OP  shift, and go to state 62
    DEC_OP  shift, and go to state 63
    '('     shift, and go to state 24
    '['     shift, and go to state 64

    $default  reduce using rule 79 (expression)

    args  go to state 26


State 33

   81 expression: STRING_LITERAL .

    $default  reduce using rule 81 (expression)


State 34

   80 expression: NUMBER_LITERAL .

    $default  reduce using rule 80 (expression)


State 35

   82 expression: TRUE_LITERAL .

    $default  reduce using rule 82 (expression)


State 36

   83 expression: FALSE_LITERAL .

    $default  reduce using rule 83 (expression)


State 37

   62 expression: . expression '+' expression
   63           | . expression '-' expression
   64           | . expression '*' expression
   65           | . expression '/' expression
   66           | . expression '%' expression
   67           | . IDENTIFIER INC_OP
   68           | . IDENTIFIER DEC_OP
   69           | . expression '>' expression
   70           | . expression '<' expression
   71           | . expression '&' expression
   72           | . expression '|' expression
   73           | . expression EQ_OP expression
   74           | . expression GE_OP expression
   75           | . expression LE_OP expression
   76           | . expression NE_OP expression
   77           | . '-' expression
   77           | '-' . expression
   78           | . IDENTIFIER '[' expression ']'
   79           | . IDENTIFIER
   80           | . NUMBER_LITERAL
   81           | . STRING_LITERAL
   82           | . TRUE_LITERAL
   83           | . FALSE_LITERAL
   84           | . function_call_statement
   85 function_call_statement: . function_call
   86                        | . function_call IDENTIFIER
   87 function_call: . function_call IDENTIFIER args
   88              | . IDENTIFIER args

    IDENTIFIER      shift, and go to state 32
    STRING_LITERAL  shift, and go to state 33
    NUMBER_LITERAL  shift, and go to state 34
    TRUE_LITERAL    shift, and go to state 35
    FALSE_LITERAL   shift, and go to state 36
    '-'             shift, and go to state 37

    expression               go to state 65
    function_call_statement  go to state 39
    function_call            go to state 21


State 38

   36 statement: PRINT expression . ';'
   62 expression: expression . '+' expression
   63           | expression . '-' expression
   64           | expression . '*' expression
   65           | expression . '/' expression
   66           | expression . '%' expression
   69           | expression . '>' expression
   70           | expression . '<' expression
   71           | expression . '&' expression
   72           | expression . '|' expression
   73           | expression . EQ_OP expression
   74           | expression . GE_OP expression
   75           | expression . LE_OP expression
   76           | expression . NE_OP expression

    EQ_OP  shift, and go to state 66
    GE_OP  shift, and go to state 67
    LE_OP  shift, and go to state 68
    NE_OP  shift, and go to state 69
    '|'    shift, and go to state 70
    '&'    shift, and go to state 71
    '>'    shift, and go to state 72
    '<'    shift, and go to state 73
    '+'    shift, and go to state 74
    '-'    shift, and go to state 75
    '*'    shift, and go to state 76
    '/'    shift, and go to state 77
    '%'    shift, and go to state 78
    ';'    shift, and go to state 79


State 39

   84 expression: function_call_statement .

    $default  reduce using rule 84 (expression)


State 40

   37 statement: SCAN IDENTIFIER . ';'

    ';'  shift, and go to state 80


State 41

   40 statement: SUCCESSFUL EXIT . ';'

    ';'  shift, and go to state 81


State 42

   41 statement: FAILED EXIT . ';'

    ';'  shift, and go to state 82


State 43

   10 var_type: . STRING
   11         | . NUMBER
   12         | . BOOLEAN
   26 statements: . statements statement
   27           | . statement
   29 statement: . '{' $@2 statements '}'
   29          | '{' $@2 . statements '}'
   30          | . var_type IDENTIFIER ';'
   31          | . var_type IDENTIFIER '[' NUMBER_LITERAL ']' ';'
   32          | . WHILE '(' expression ')' while_statement
   33          | . IF '(' expression ')' statement
   34          | . IF '(' expression ')' statement ELSE statement
   35          | . IDENTIFIER '=' expression ';'
   36          | . PRINT expression ';'
   37          | . SCAN IDENTIFIER ';'
   38          | . IDENTIFIER INC_OP ';'
   39          | . IDENTIFIER DEC_OP ';'
   40          | . SUCCESSFUL EXIT ';'
   41          | . FAILED EXIT ';'
   42          | . function_call_statement ';'
   85 function_call_statement: . function_call
   86                        | . function_call IDENTIFIER
   87 function_call: . function_call IDENTIFIER args
   88              | . IDENTIFIER args

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    STRING      shift, and go to state 3
    BOOLEAN     shift, and go to state 4
    IF          shift, and go to state 6
    WHILE       shift, and go to state 7
    PRINT       shift, and go to state 8
    SCAN        shift, and go to state 9
    SUCCESSFUL  shift, and go to state 10
    FAILED      shift, and go to state 11
    '{'         shift, and go to state 12

    var_type                 go to state 17
    statements               go to state 83
    statement                go to state 19
    function_call_statement  go to state 20
    function_call            go to state 21


State 44

    0 $accept: start $end .

    $default  accept


State 45

    2 program: function_declaration_statement program . function_definition_block
   20 function_definition_block: . FUNCTION function_definition '{' $@1 statements '}'
   21                          | . FUNCTION function_definition '{' '}'

    FUNCTION  shift, and go to state 84

    function_definition_block  go to state 85


State 46

   30 statement: var_type IDENTIFIER . ';'
   31          | var_type IDENTIFIER . '[' NUMBER_LITERAL ']' ';'

    ';'  shift, and go to state 86
    '['  shift, and go to state 87


State 47

   26 statements: statements statement .

    $default  reduce using rule 26 (statements)


State 48

   42 statement: function_call_statement ';' .

    $default  reduce using rule 42 (statement)


State 49

   86 function_call_statement: function_call IDENTIFIER .  [EQ_OP, GE_OP, LE_OP, NE_OP, '|', '&', '>', '<', '+', '-', '*', '/', '%', ';', ')', ',', ']']
   87 function_call: function_call IDENTIFIER . args
   89 args: . '(' arg_list ')'
   90     | . '(' ')'

    '('  shift, and go to state 24

    $default  reduce using rule 86 (function_call_statement)

    args  go to state 88


State 50

   38 statement: IDENTIFIER INC_OP ';' .

    $default  reduce using rule 38 (statement)


State 51

   39 statement: IDENTIFIER DEC_OP ';' .

    $default  reduce using rule 39 (statement)


State 52

   90 args: '(' ')' .

    $default  reduce using rule 90 (args)


State 53

   62 expression: expression . '+' expression
   63           | expression . '-' expression
   64           | expression . '*' expression
   65           | expression . '/' expression
   66           | expression . '%' expression
   69           | expression . '>' expression
   70           | expression . '<' expression
   71           | expression . '&' expression
   72           | expression . '|' expression
   73           | expression . EQ_OP expression
   74           | expression . GE_OP expression
   75           | expression . LE_OP expression
   76           | expression . NE_OP expression
   92 arg_list: expression .  [')', ',']

    EQ_OP  shift, and go to state 66
    GE_OP  shift, and go to state 67
    LE_OP  shift, and go to state 68
    NE_OP  shift, and go to state 69
    '|'    shift, and go to state 70
    '&'    shift, and go to state 71
    '>'    shift, and go to state 72
    '<'    shift, and go to state 73
    '+'    shift, and go to state 74
    '-'    shift, and go to state 75
    '*'    shift, and go to state 76
    '/'    shift, and go to state 77
    '%'    shift, and go to state 78

    $default  reduce using rule 92 (arg_list)


State 54

   89 args: '(' arg_list . ')'
   91 arg_list: arg_list . ',' expression

    ')'  shift, and go to state 89
    ','  shift, and go to state 90


State 55

   35 statement: IDENTIFIER '=' expression . ';'
   62 expression: expression . '+' expression
   63           | expression . '-' expression
   64           | expression . '*' expression
   65           | expression . '/' expression
   66           | expression . '%' expression
   69           | expression . '>' expression
   70           | expression . '<' expression
   71           | expression . '&' expression
   72           | expression . '|' expression
   73           | expression . EQ_OP expression
   74           | expression . GE_OP expression
   75           | expression . LE_OP expression
   76           | expression . NE_OP expression

    EQ_OP  shift, and go to state 66
    GE_OP  shift, and go to state 67
    LE_OP  shift, and go to state 68
    NE_OP  shift, and go to state 69
    '|'    shift, and go to state 70
    '&'    shift, and go to state 71
    '>'    shift, and go to state 72
    '<'    shift, and go to state 73
    '+'    shift, and go to state 74
    '-'    shift, and go to state 75
    '*'    shift, and go to state 76
    '/'    shift, and go to state 77
    '%'    shift, and go to state 78
    ';'    shift, and go to state 91


State 56

   14 function: IDENTIFIER . params
   15 params: . '(' param_list ')'
   16       | . '(' ')'

    '('  shift, and go to state 92

    params  go to state 93


State 57

    8 function_declaration: VOID function .  [';']
    9                     | VOID function . IDENTIFIER
   13 function: function . IDENTIFIER params

    IDENTIFIER  shift, and go to state 94

    $default  reduce using rule 8 (function_declaration)


State 58

    5 function_declaration_statement: FUNCTION function_declaration ';' .

    $default  reduce using rule 5 (function_declaration_statement)


State 59

    6 function_declaration: var_type function .  [';']
    7                     | var_type function . IDENTIFIER
   13 function: function . IDENTIFIER params

    IDENTIFIER  shift, and go to state 95

    $default  reduce using rule 6 (function_declaration)


State 60

   33 statement: IF '(' expression . ')' statement
   34          | IF '(' expression . ')' statement ELSE statement
   62 expression: expression . '+' expression
   63           | expression . '-' expression
   64           | expression . '*' expression
   65           | expression . '/' expression
   66           | expression . '%' expression
   69           | expression . '>' expression
   70           | expression . '<' expression
   71           | expression . '&' expression
   72           | expression . '|' expression
   73           | expression . EQ_OP expression
   74           | expression . GE_OP expression
   75           | expression . LE_OP expression
   76           | expression . NE_OP expression

    EQ_OP  shift, and go to state 66
    GE_OP  shift, and go to state 67
    LE_OP  shift, and go to state 68
    NE_OP  shift, and go to state 69
    '|'    shift, and go to state 70
    '&'    shift, and go to state 71
    '>'    shift, and go to state 72
    '<'    shift, and go to state 73
    '+'    shift, and go to state 74
    '-'    shift, and go to state 75
    '*'    shift, and go to state 76
    '/'    shift, and go to state 77
    '%'    shift, and go to state 78
    ')'    shift, and go to state 96


State 61

   32 statement: WHILE '(' expression . ')' while_statement
   62 expression: expression . '+' expression
   63           | expression . '-' expression
   64           | expression . '*' expression
   65           | expression . '/' expression
   66           | expression . '%' expression
   69           | expression . '>' expression
   70           | expression . '<' expression
   71           | expression . '&' expression
   72           | expression . '|' expression
   73           | expression . EQ_OP expression
   74           | expression . GE_OP expression
   75           | expression . LE_OP expression
   76           | expression . NE_OP expression
